# GeoMod2-BezierBSpline

./: CMakeLists.txt  animation.h  bezierbspline.cpp  bezierbspline.h  fishanimation.cpp  fishanimation.h  glcontextsurfacewrapper.cpp  glcontextsurfacewrapper.h  glscenerenderer.cpp  glscenerenderer.h  glscenerenderer2.cpp  glscenerenderer2.h  glscenerendererold.cpp  glscenerendererold.h  gmlibwrapper.cpp  gmlibwrapper.h  guiapplication.cpp  guiapplication.h  knotvector.c  knotvector.h  main.cpp  main.qml  main02.qml  main03.qml  mbeziersurface.c  mbeziersurface.h  mybspline.c  mybspline.h  myerbssurf.c  myerbssurf.h  mysubsurface.c  mysubsurface.h  mysurface.cpp  mysurface.h  mywatersurface.cpp  mywatersurface.h  qml.qrc  testtorus.h  wateranimation.cpp  wateranimation.h  (+2 more)
qml/: DefaultRenderWindow.qml  MySplitView.qml  MySplitView2.qml  NewView.qml  NewViewSet.qml  RelativeSplitView.qml  View.qml  ViewSet.qml  main.qml
qml/components/: DefaultRenderWindow.qml  RelativeSplitView.qml  View.qml
report/: .report.tex.kate-swp  Report.aux  Report.blg  Report.tex  Report.toc  report.aux  report.bbl  report.blg  report.tex  sources.bib
